tests/ui/underscore-imports/issue-110164.ed2021.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-110164.rs:8:5
   |
LL | use _::a;
   |     ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-110164.rs:11:5
   |
LL | use _::*;
   |     ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-110164.rs:16:9
   |
LL |     use _::a;
   |         ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-110164.rs:19:9
   |
LL |     use _::*;
   |         ^ expected identifier, found reserved identifier

error[E0432]: unresolved import `self::*`
  --> $DIR/issue-110164.rs:4:5
   |
LL | use self::*;
   |     ^^^^^^^ cannot glob-import a module into itself

error[E0432]: unresolved import `crate::*`
  --> $DIR/issue-110164.rs:6:5
   |
LL | use crate::*;
   |     ^^^^^^^^ cannot glob-import a module into itself

error[E0432]: unresolved import `_`
  --> $DIR/issue-110164.rs:11:5
   |
LL | use _::*;
   |     ^ use of unresolved module or unlinked crate `_`
   |
   = help: you might be missing a crate named `_`

error[E0432]: unresolved import `_`
  --> $DIR/issue-110164.rs:8:5
   |
LL | use _::a;
   |     ^ use of unresolved module or unlinked crate `_`
   |
   = help: you might be missing a crate named `_`

error[E0432]: unresolved import `_`
  --> $DIR/issue-110164.rs:16:9
   |
LL |     use _::a;
   |         ^ use of unresolved module or unlinked crate `_`
   |
   = help: you might be missing a crate named `_`

error[E0432]: unresolved import `_`
  --> $DIR/issue-110164.rs:19:9
   |
LL |     use _::*;
   |         ^ use of unresolved module or unlinked crate `_`
   |
   = help: you might be missing a crate named `_`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0432`.
